# exp_assignment3

./: CMakeLists.txt  README.md  package.xml
config/: sim.rviz
launch/: gmapping.launch  move_base.launch  scripts.launch  simulation.launch
param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/: ball_tracking.py  behaviour_controller.py  human_interaction_gen.py  motion_controller.py
urdf/: robot.gazebo  robot.xacro
worlds/: house2.world
